# a_data_home

./: .gitignore  README.md  pyproject.toml
a_data_home/: .sqlfluff  dbt_project.yml
a_data_home/macros/: generate_source.sql  read_apple_date.sql
a_data_home/models/: sources.yml
a_data_home/models/marts/: _schema.yml  mart_conversations.sql  mart_message_timeseries.sql
a_data_home/models/stage/chat/: _schema.yml  stg_attributed_body.sql  stg_chat_message_join.sql  stg_message.sql
a_data_home/models/stage/contacts/: _schema.yml  stg_contacts.sql
scripts/: decode.py  prepare.py
